--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@
         </button>
       </div>
       <div id="signoutButton">
-        <button type="button" class="btn btn-primary" id="profile-register-button" onClick="reg_or_mv_to_myprofile()">
+        <button type="button" class="btn btn-outline-primary" id="profile-register-button" onClick="reg_or_mv_to_myprofile()">
           마이 프로필
         </button> 
         <button type="button" class="btn btn-primary" id="sign-out-button" onClick="logOutHandler()">
