--- a/templates/index.html
+++ b/templates/index.html
@@ -265,7 +265,7 @@
         <input type="text" class="form-control" placeholder="Search name" />
 
       </div> -->
-      <div class="input-group mb-3" style="margin: 50px">
+      <div class="input-group mb-3" style="margin: 50px; width: 400px;">
         <input type="text" class="form-control" placeholder="이름으로 검색하기" id="search_name" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="button"  onClick="search_profile()">검색</button>
       </div>
