--- a/templates/detail.html
+++ b/templates/detail.html
@@ -175,6 +175,9 @@
       #logout:hover{
         cursor:pointer
       }
+      .btn:hover{
+        cursor:pointer
+      }
     </style>
     <script>
       let writer_Id;
