--- a/templates/signin.html
+++ b/templates/signin.html
@@ -52,6 +52,9 @@
         background-size: contain;
         margin: 20px 50px 0px 50px;
       }
+      .btn:hover{
+        cursor:pointer
+      }
     </style>
     <script>
       $(document).ready(function () {
