--- a/templates/signup.html
+++ b/templates/signup.html
@@ -44,6 +44,9 @@
       background-size: contain;
       margin: 20px 50px 0px 50px;
     }
+    .btn:hover{
+        cursor:pointer
+      }
   </style>
   <script>
 
