--- a/templates/detail.html
+++ b/templates/detail.html
@@ -254,6 +254,7 @@
       }
 
       function delete_profile() {
+        if (confirm('정말로 삭제하시겠습니까?')) {
         $.ajax({
           type: "DELETE",
           url: "/profile/delete",
@@ -273,6 +274,7 @@
               });
           },
         });
+      }
       }
 
       function logOutHandler() {
@@ -403,6 +405,7 @@
       }
 
       function delete_comment() {
+        if (confirm("정말로 삭제하시겠습니까?")) {
         let formData = new FormData();
         let commentId = $('#commentId').text();
         formData.append("commentId_give",commentId);
@@ -420,6 +423,7 @@
               });
           
         })
+      }
       }
 
     </script>
