--- a/templates/detail.html
+++ b/templates/detail.html
@@ -471,7 +471,7 @@
           class="btn btn-outline-danger"
           onClick="delete_profile()"
         >
-          프로필 삭제
+        <i class="fa-regular fa-trash-can"></i>
         </button>
       </div>
     </div>
