--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="icon" href="/static/images/favicon.png">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   <style>
     * {
       box-sizing: border-box;
@@ -246,7 +253,7 @@
       </div> -->
       <div class="input-group mb-3" style="margin: 50px; width: 400px;">
         <input type="text" class="form-control" placeholder="이름으로 검색하기" id="search_name" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button class="btn btn-outline-secondary" type="button" onClick="search_profile()">검색</button>
+        <button class="btn btn-outline-secondary" type="button" onClick="search_profile()"><i class="fa-solid fa-magnifying-glass"></i></button>
       </div>
     </div>
   </div>
