프로필 미보유자는 방명록 등록 불가

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -187,7 +187,6 @@
 
           writer_Id = response["result"]["id"];
           if (writer_Id == undefined){ //비로그인 유저는 접속 불가
-// <<<<<<< HEAD
             Swal.fire({
                 icon: "error",
                 title: "Oops...",
@@ -198,16 +197,8 @@
                   window.location.href = '/'
                 }
               });
-          } else { //로그인 유저 프로필 여부 체크
-            profile_check(writer_Id)
           }
 
-// =======
-//             alert('로그인 후 이용 부탁드립니다.')
-//             window.location.href = '/'
-//           } 
-          
-// >>>>>>> 1c6be3648d593b2d9f0ce4bfdc8398fec31f46de
           writer_Id == profile_Id
             ? $("#editProfile").css("display", "block")
             : $("#editProfile").css("display", "none");
@@ -225,31 +216,17 @@
           });
       }
 
-      function profile_check(userId) {
+      async function profile_check(userId) {
         let is_exist = false
-        $.ajax({
+        await $.ajax({
           type: "GET",
           url: "/profileCheck",
           data: {
             userId: userId
           },
           success: function (response) {
-// <<<<<<< HEAD
-            if (response['result'] == null) { //프로필 미보유자는 home 으로 이동
-              Swal.fire({
-                icon: "error",
-                title: "Oops...",
-                text: '프로필 등록 후 이용이 가능합니다.',
-                confirmButtonText: "확인",
-              }).then((result) => {
-                if (result.isConfirmed) {
-                  window.location.href = '/profile'
-                }
-              });
-// =======
-//             if (response['result'] != null) {
-//               is_exist = true;
-// >>>>>>> 1c6be3648d593b2d9f0ce4bfdc8398fec31f46de
+            if (response['result'] != null) {
+              is_exist = true;
             }
           }
         });
@@ -286,8 +263,9 @@
         window.location.href = "/";
       }
 
-      function commentWrite() {
-        if (!profile_check(writer_Id)) {
+      async function commentWrite() {
+        let profile_exist = await profile_check(writer_Id)
+        if (!profile_exist) {
           alert('프로필 등록 후 이용가능합니다.')
           return;
         }
