--- a/templates/index.html
+++ b/templates/index.html
@@ -193,9 +193,9 @@
                               <img src="${image}"/>
                               <div class="card-body">
                                 <h5 class="card-title" style="text-align:center; font-size:1.875rem">${name}</h5>
-                                <p class="card-text">직무 : ${field}</p>
-                                <a class="card-text" href="${blog}" target="_blank" rel="noopener noreferrer">블로그 : ${blog}</a>
-                                <p class="card-text">mbti : ${mbti}</p>
+                                <p class="card-text"><i class="fa-solid fa-laptop-code"></i>&nbsp;&nbsp;${field}</p>
+                                <p class="card-text" rel="noopener noreferrer"><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;${blog}</p>
+                                <p class="card-text"><i class="fa-regular fa-newspaper"></i>&nbsp;&nbsp;${mbti}</p>
                               </div>
                             </div>
                           </div>`
@@ -205,9 +205,9 @@
                               <img src="${image}"/>
                               <div class="card-body">
                                 <h5 class="card-title" style="text-align:center; font-size:1.875rem">${name}</h5>
-                                <p class="card-text">직무 : ${field}</p>
-                                <a class="card-text" href="${blog}" target="_blank" rel="noopener noreferrer">블로그 : ${blog}</a>
-                                <p class="card-text">mbti : ${mbti}</p>
+                                <p class="card-text"><i class="fa-solid fa-laptop-code"></i>&nbsp;&nbsp;${field}</p>
+                                <p class="card-text" rel="noopener noreferrer"><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;${blog}</p>
+                                <p class="card-text"><i class="fa-regular fa-newspaper"></i>&nbsp;&nbsp;${mbti}</p>
                               </div>
                             </div>
                           </div>`
