--- a/templates/detail.html
+++ b/templates/detail.html
@@ -344,7 +344,7 @@
                                         type="button"
                                         class="btn btn-outline-danger"
                                         onClick="delete_comment()" style="float: right">
-                                        글삭제
+                                        <i class="fa-regular fa-trash-can"></i>
                                       </button>
                                     </div>
                                   </div>
@@ -453,7 +453,7 @@
           class="btn btn-outline-danger"
           onClick="delete_profile()"
         >
-        <i class="fa-regular fa-trash-can"></i>
+        프로필 삭제
         </button>
       </div>
     </div>
