프로필이 삭제되면 방명록에 있던 글도 모두 삭제하게끔 기능 수정

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -239,7 +239,7 @@
           type: "DELETE",
           url: "/profile/delete",
           data: {
-            id_give: writer_Id,
+            id_give: writer_Id
           },
           success: function (response) {
             Swal.fire({
