--- a/templates/detail.html
+++ b/templates/detail.html
@@ -464,10 +464,10 @@
         <p><i class="fa-solid fa-laptop-code"></i>&nbsp;&nbsp;{{field}}</p>
       </div>
       <div class="col-12">
-        <p><a href="{{github}}" target='_blank'><i class="fa-brands fa-github"></i>&nbsp;&nbsp;{{github}}</a></p>
+        <p><a href="{{github}}" target='_blank'><i class="fa-brands fa-github"></i>&nbsp;&nbsp;{{github}}&nbsp;&nbsp;<i class="fa-solid fa-link"></i></a></p>
       </div>
       <div class="col-12">
-        <p><a href="{{blog}}" target='_blank'><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;{{blog}}</a></p>
+        <p><a href="{{blog}}" target='_blank'><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;{{blog}}&nbsp;&nbsp;<i class="fa-solid fa-link"></i></a></p>
       </div>
       <div class="col-12">
         <p><i class="fa-regular fa-newspaper"></i>&nbsp;&nbsp;{{mbti}}</p>
