--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,7 @@
     .upload_photo {
       /* background-color: red; */
       text-align: center;
-      margin: 100px;
+      margin: 6.25rem;
     }
 
     .form {
@@ -48,8 +48,8 @@
     }
 
     .upload_photo>.card-img-top {
-      width: 200px;
-      height: 200px;
+      width: 12.5rem;
+      height: 12.5rem;
     }
     .btn:hover{
         cursor:pointer
@@ -240,7 +240,7 @@
   </div>
   <div class="title">
     <div class="row">
-      <div class="col" style="margin:50px">
+      <div class="col" style="margin:3.125rem">
         <a href="/"><img src="/static/images/home.png" alt="홈으로가기" width="50"></a>
       </div>
     </div>
