--- a/templates/signin.html
+++ b/templates/signin.html
@@ -39,18 +39,18 @@
         background-color: rgb(239, 239, 239);
 
         width: 35%;
-        height: 1000px;
+        height: 62.5rem;
         margin: auto;
       }
 
       .mainLogo {
         /* background-color: beige; */
-        height: 100px;
+        height: 6.25rem;
         background-image: url(/static/images/logo.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
-        margin: 20px 50px 0px 50px;
+        margin: 1.25rem 3.125rem 0rem 3.125rem;
       }
       .btn:hover{
         cursor:pointer
@@ -135,7 +135,7 @@
       <div class="mainLogo"></div>
       <div class="inputId">
         <div class="row">
-          <div class="col" style="margin: 20px 50px 0px 50px">
+          <div class="col" style="margin: 1.25rem 3.125rem 0rem 3.125rem">
             <p>아이디</p>
             <input
               type="text"
@@ -148,14 +148,14 @@
       </div>
       <div class="inputPw">
         <div class="row">
-          <div class="col" style="margin: 25px 50px 10px 50px">
+          <div class="col" style="margin: 1.563rem 3.125rem 0.625rem 3.125rem">
             <p>비밀번호</p>
             <input
               type="password"
               class="form-control"
               id="userpw"
               placeholder="비밀번호를 입력해주세요."
-              style="margin-bottom: 10px"
+              style="margin-bottom: 0.625rem"
             />
           </div>
         </div>
