--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,18 +31,18 @@
       background-color: rgb(239, 239, 239);
 
       width: 35%;
-      height: 1000px;
+      height: 62.5rem;
       margin: auto;
     }
 
     .mainLogo {
       /* background-color: beige; */
-      height: 100px;
+      height: 6.25rem;
       background-image: url(/static/images/logo.png);
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
-      margin: 20px 50px 0px 50px;
+      margin: 1.25rem 3.125rem 0rem 3.125rem;
     }
     .btn:hover{
         cursor:pointer
@@ -168,7 +168,7 @@
     <div class="mainLogo"></div>
     <div class="inputId">
       <div class="row">
-        <div class="col" style="margin: 20px 50px 0px 50px">
+        <div class="col" style="margin: 1.25rem 3.125rem 0rem 3.125rem">
           <p>아이디</p>
           <input type="text" class="form-control" id="userid" placeholder="영문, 숫자 5-11자" />
           <span id="id-error-message"></span>
@@ -177,41 +177,41 @@
     </div>
     <div class="inputPw">
       <div class="row">
-        <div class="col" style="margin: 25px 50px 10px 50px">
+        <div class="col" style="margin: 1.563rem 3.125rem 0.625rem 3.125rem">
           <p>비밀번호</p>
           <input type="password" class="form-control" id="userpw" placeholder="숫자, 영문, 특수문자 조합 최소 8자"
-            style="margin-bottom: 10px" />
+            style="margin-bottom: 0.625rem" />
           <input type="password" class="form-control" placeholder="비밀번호 재입력" id="userpw-check" />
           <span id="error-message"></span>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12" style="margin: 25px 50px 10px 50px">
+      <div class="col-12" style="margin: 1.563rem 3.125rem 0.625rem 3.125rem">
         <input type="checkbox" id="allagree" onclick="allclick()" /> 전체 동의
       </div>
-      <div class="col-12" style="margin: 0px 50px 10px 50px">
+      <div class="col-12" style="margin: 0rem 3.125rem 0.625rem 3.125rem">
         <input type="checkbox" id="agree1" /> [필수] 이용약관 동의
       </div>
-      <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement1">
+      <div class="col-12" style="margin: 0rem 3.125rem 0.625rem 3.125rem" id="agreement1">
         <a style="color: #1890ff">전문 보기</a>
       </div>
-      <div class="col-12" style="margin: 0px 50px 10px 50px">
+      <div class="col-12" style="margin: 0rem 3.125rem 0.625rem 3.125rem">
         <input type="checkbox" id="agree2" /> [필수] 개인정보 수집 및 이용
         동의
       </div>
-      <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement2">
+      <div class="col-12" style="margin: 0rem 3.125rem 0.625rem 3.125rem" id="agreement2">
         <a style="color: #1890ff">전문 보기</a>
       </div>
-      <div class="col-12" style="margin: 0px 50px 10px 50px">
+      <div class="col-12" style="margin: 0rem 3.125rem 0.625rem 3.125rem">
         <input type="checkbox" id="agree3" /> [선택] 마케팅 정보 수집 동의
       </div>
-      <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement3">
+      <div class="col-12" style="margin: 0rem 3.125rem 0.625rem 3.125rem" id="agreement3">
         <a style="color: #1890ff">전문 보기</a>
       </div>
     </div>
     <div class="row">
-      <div class="col" style="margin: 25px 50px 10px 50px">
+      <div class="col" style="margin: 1.563rem 3.125rem 0.625rem 3.125rem">
         <button type="button" class="btn btn-dark" style="width: 100%" onclick="join()" id="join-button" disabled>
           가입하기
         </button>
