--- a/templates/signup.html
+++ b/templates/signup.html
@@ -164,6 +164,11 @@
 </head>
 
 <body>
+  <div class="row">
+    <div class="col" style="margin:3.125rem">
+      <a href="/"><img src="/static/images/home.png" alt="홈으로가기" width="50"></a>
+    </div>
+  </div>
   <div class="main">
     <div class="mainLogo"></div>
     <div class="inputId">
