방명록 기본html 부분 주석처리

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -506,7 +506,7 @@
         style="margin-top: 0.625rem; margin-bottom: 0.625rem"
       >
         <!-- 여기서부터 방명록 코드 반복시작-->
-        <div class="row" style="margin-top: 0.625rem">
+        <!-- <div class="row" style="margin-top: 0.625rem">
           <div class="col-12" style="width: 95%; margin: 0 auto">
             <div class="row">
               <div class="col-2 userImgArea">
@@ -557,117 +557,7 @@
               가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
             </p>
           </div>
-        </div>
-        <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12" style="margin-top: 0.625rem; margin-bottom: 0.625rem">
-          <!-- 여기서부터 방명록 코드 반복시작-->
-          <div class="row" style="margin-top: 0.625rem">
-            <div class="col-12" style="width: 95%; margin: 0 auto">
-              <div class="row">
-                <div class="col-2 userImgArea"></div>
-                <div class="col-10 userNameArea">이름</div>
-              </div>
-            </div>
-            <hr
-              style="
-                width: 95%;
-                margin: 0 auto;
-                margin-top: 1.25rem;
-                margin-bottom: 1.25rem;
-              "
-            />
-            <div class="col-12 userCommentArea" style="border: 0.063rem solid black">
-              <p>
-                방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz
-              </p>
-            </div>
-          </div>
-        </div>
-        <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12" style="margin-top: 0.625rem; margin-bottom: 0.625rem">
-          <!-- 여기서부터 방명록 코드 반복시작-->
-          <div class="row" style="margin-top: 0.625rem">
-            <div class="col-12" style="width: 95%; margin: 0 auto">
-              <div class="row">
-                <div class="col-2 userImgArea"></div>
-                <div class="col-10 userNameArea">이름</div>
-              </div>
-            </div>
-            <hr
-              style="
-                width: 95%;
-                margin: 0 auto;
-                margin-top: 1.25rem;
-                margin-bottom: 1.25rem;
-              "
-            />
-            <div class="col-12 userCommentArea" style="border: 0.063rem solid black">
-              <p>
-                방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz 방명록 글은 여기로 불러주시면 됩니다.
-                가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz 방명록
-                글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하
-                abcdefghijklmnopqrstuvwxyz
-              </p>
-            </div>
-          </div>
-        </div>
+        </div> -->
         <!-- 여기서부터 방명록 코드 반복 끝-->
       </div>
       <!-- 방명록 영역 끝 -->
