btn outline Modified

--- a/templates/register.html
+++ b/templates/register.html
@@ -307,7 +307,7 @@
             </div>
             <div class="col-12">
               <button onclick="save_profile()" class="btn btn-primary">등록</button>
-              <button onclick="location.href='/'" type="button" class="btn btn-primary">다음에 등록</button>
+              <button onclick="location.href='/'" type="button" class="btn btn-outline-primary">다음에 등록</button>
             </div>
           </div>
         </div>
