회원가입 비밀번호 확인 문구 변경

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -184,7 +184,7 @@
       <div class="row">
         <div class="col" style="margin: 1.563rem 3.125rem 0.625rem 3.125rem">
           <p>비밀번호</p>
-          <input type="password" class="form-control" id="userpw" placeholder="숫자, 영문, 특수문자 조합 최소 8자"
+          <input type="password" class="form-control" id="userpw" placeholder="숫자, 영문 조합 최소 8자"
             style="margin-bottom: 0.625rem" />
           <input type="password" class="form-control" placeholder="비밀번호 재입력" id="userpw-check" />
           <span id="error-message"></span>
