프로필에서 url 값이 없는 깃허브, 블로그를 눌렀을 때 창이 열리는 것 수정 실제 url 값이 없는 것을 클릭시 똑같은 페이지의 창이 열리는 현상이 있었음, ux 가 좋지 않다고 생각 a 태그에 _blank 타입을 통해 새창이 무조건 열리고 있었음 해당 타입 삭제 후 onclick으로 기능을 새로 만듦, 이때 href는 void(0) 처리 a 태그는 value를 가질 수 없어 custom data를 활용해 가져왔음 관련링크: https://this-is-coding.tistory.com/m/13

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -232,6 +232,16 @@
       return is_exist;
     }
 
+    function call_url(buttod_id) {
+      let urlAddress = document.getElementById(buttod_id).getAttribute('data-value');
+      if (urlAddress === null || urlAddress === undefined || urlAddress === '') {
+        return;
+      } else {
+        let openNewWindow = window.open("about:blank");
+        openNewWindow.location.href = urlAddress;
+      }
+    }
+
     function delete_profile() {
       Swal.fire({
         title: '정말로 삭제하시겠습니까?',
@@ -488,11 +498,11 @@
       <p><i class="fa-solid fa-laptop-code"></i>&nbsp;&nbsp;{{field}}</p>
     </div>
     <div class="col-12">
-      <p><a href="{{github}}" target='_blank'><i class="fa-brands fa-github"></i>&nbsp;&nbsp;{{github}}&nbsp;&nbsp;<i
+      <p><a id="githubUrl" href="javascript:void(0);" onclick="call_url(this.id)" data-value="{{github}}"><i class="fa-brands fa-github"></i>&nbsp;&nbsp;{{github}}&nbsp;&nbsp;<i
             class="fa-solid fa-link"></i></a></p>
     </div>
     <div class="col-12">
-      <p><a href="{{blog}}" target='_blank'><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;{{blog}}&nbsp;&nbsp;<i
+      <p><a id="blogUrl" href="javascript:void(0);" onclick="call_url(this.id)" data-value="{{blog}}"><i class="fa-brands fa-chrome"></i>&nbsp;&nbsp;{{blog}}&nbsp;&nbsp;<i
             class="fa-solid fa-link"></i></a></p>
     </div>
     <div class="col-12">
